Update the post on Marxism

--- a/_posts/人文社科/2021-06-13-马原复习.md
+++ b/_posts/人文社科/2021-06-13-马原复习.md
@@ -142,6 +142,8 @@ math: true
 时间和空间是物质运动的**存在形式**（**存在方式**）
 
 > 物质的存在方式是运动，运动的存在方式是时空
+>
+> 所以说，“时间是物质运动的存在形式”是正确的说法
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210613180022.png"/>
 
@@ -492,3 +494,160 @@ math: true
 
 ## 否定之否定规律
 
++ 肯定因素：维持现成事物存在的因素
+
++ 否定因素：促使现成事物灭亡的因素
+
++ 辩证否定观的基本内容：
+
+  1. 否定是事物的**自我否定**（*自己的基因决定了…*）
+
+     > 认为外在力量对事物进行消灭 -> 形而上学
+     >
+     > 不能将“偶然”当作必然
+
+  2. 否定是事物发展的环节
+
+  3. 否定是新旧事物联系的环节
+
+  4. 辩证否定的实质是“**扬弃**”（批判又继承）
+
+     > 认为肯定一切，否定一切 -> 形而上学
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619190335.png"/>
+
+否定之否定规律：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619190741.png" style="zoom:80%;" />
+
+方法论：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619191422.png" style="zoom:80%;" />
+
+## 客观辩证法与主观辩证法
+
+客观辩证法采取外部必然的形式，主观辩证法采取观念的、逻辑的形式
+
+# Chap4. 认识论
+
+> 唯物论、辩证法主要研究客观世界及其规律；认识论主要研究主观世界的问题
+
+## 实践与认识
+
+错误的实践观：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619221159.png"/>
+
+正确的实践观：实践是感性的、对象性的物质活动
+
+实践的本质含义：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619221924.png"/>
+
+> 实践必须是人
+
+实践的基本特征：
+
++ **直接现实性**（本质特性）
+
+  > 实践具有将“脑中的”变成“现实的”功能
+
++ 自觉能动性（主体能动性）
+
+  > 实践受意识指导，体现主体的目的性
+
++ 社会历史性
+
+  > 不同历史阶段实践内涵不同
+
+实践主体：具有一定的主体能力，从事现实社会实践活动的人。
+
+实践主体的能力：自然能力和精神能力（知识性因素和非知识性因素）
+
+实践中介：其中介系统分为两个：物质性工具系统、语言符号工具系统 
+
+主体与客体的关系：**实践关系**（最根本，最先）、认识关系、价值关系
+
+实践的三种基本类型：**物质生产实践**（劳动，最基本）、社会政治实践（搞关系）、科学文化实践（探索）
+
+> 人的活动分为两种：本能活动、实践活动
+
+## ⭐实践决定认识
+
+> 实践高于认识，认识不能决定实践
+
+1. **实践是认识的来源**：①实践产生认识的需要；②实践还为认识的形成提供了可能
+
+   > 认识不排除天赋（生理因素）的影响
+   >
+   > 认识也受间接经验影响 
+
+2. 实践是认识的动力
+
+   > 注意，实践不是认识的先导
+
+3. 实践是认识的目的（小马过河，实践需求）
+
+4. 实践是检验认识真理性的唯一标准
+
+## 认识的本质、过程和规律
+
+认识的本质（概念）：主体在**实践基础**上对客体的**能动反映**
+
+认识的反映特性与创造特性**不可分割**
+
+# Chap 5. 唯物史观
+
+## 社会存在和社会意识及其辩证关系
+
+> 生产方式（往小地说，生产力）起着决定作用
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620012302.png"/>
+
+> 科技不是生产力的独立要素，但是在生产劳动中的（不是社会历史）决定性因素
+>
+> 生产关系，也是物质（不以人的意志为转移），但是人与人的关系
+>
+> 生产工具区分社会经济**时代**的客观依据；生产资料所有制判断社会经济结构**性质**的客观依据
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620011446.png"/>
+
+社会存在决定社会意识：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620011700.png"/>
+
+社会意识反作用于社会存在（相对独立性）
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620011930.png"/>
+
+## 生产力与生产关系的矛盾
+
+生产力：物质力量、人和自然的关系
+
+生产力是内容，生产关系是形式–>辩证法的内容与形式。
+
++ 生产力决定生产关系
++ 生产关系反作用于生产力（双向）
+
+两者有机结合和统一，构成社会的生产方式
+
+> 社会生产第一规律：生产关系一定要适应生产力发展状况的规律
+
+## 经济基础与上层建筑的矛盾
+
+经济基础是 … 生产关系的总和
+
+上层建筑 … 意识形态以及制度、组织和设施：
+
++ 意识形态（观念上层建筑）：包括政治法律思想、道德、艺术、宗教、哲学等思想观点
++ 政治法律制度以及设施和政治组织（政治上层建筑，局于主导，国家政权是核心）
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620013848.png" style="zoom:67%;" />
+
+> 属于上层建筑的社会意识，就是社会意识形态
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620014255.png" style="zoom:67%;" />
+
+> 社会发展第二规律：上层建筑一定要适应经济基础发展状况的规律
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210620014605.png" style="zoom:67%;" />
