Update the posts of final review

--- a/_posts/人文社科/2021-06-13-马原复习.md
+++ b/_posts/人文社科/2021-06-13-马原复习.md
@@ -28,7 +28,7 @@ math: true
 
 + 社会根源：资本主义生产方式的发展
 + 阶级基础（实践基础）：无产阶级在反抗资产阶级剥削和压迫的斗争
-+ ⭐**思想渊源**：德国古典哲学、英国古典政治经济学、英法两国的空想社会主义
++ **思想渊源**：德国古典哲学、英国古典政治经济学、英法两国的空想社会主义
 
 ## 马克思主义的鲜明特征
 
